Scrollbars fix.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   background: #708090;
   cursor: default;
   font-family: sans-serif;
